# pytest-data-loader

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: release.yml  test.yml
src/pytest_data_loader/: __init__.py  compat.py  constants.py  errors.py  exceptions.py  fixtures.py  paths.py  plugin.py  types.py  utils.py  validators.py
src/pytest_data_loader/loaders/: __init__.py  cache.py  impl.py  loaders.py  reader.py
tests/: .gitattributes  conftest.py  paths.py
tests/data/: json_object.json
tests/data/dir/dir_inner/: .inner_hidden_file
tests/data/files/compressed/: comma.csv.xz  data.jsonl.bz2
tests/data/files/csv/: comma.csv  semicolon.csv
tests/data/files/ini/: ini.ini
tests/data/files/json/: array.json  object_nested.json
tests/data/files/jsonl/: data.jsonl  data2.jsonl
tests/data/files/text/encoding/: latin-1.txt
tests/data/files/toml/: toml.toml
tests/data/files/xml/: xml1.0.xml  xml1.1.xml
tests/data/files/yaml/: yaml.yml  yaml_documents.yml
tests/data/symlinks/: symlink.txt
tests/data/symlinks/circular/: symlink.txt
tests/data/symlinks/dir/: symlink
tests/tests_loader/: helper.py  test_load_file.py  test_parametrize_dir.py  test_parametrize_file.py
tests/tests_loader/tests_reader/: test_csv_reader.py  test_csv_reader_pandas.py  test_csv_reader_pands.py  test_ini_reader.py  test_jsonl_reader.py  test_pdf_reader.py  test_reader_registration.py  test_text_reader.py  test_toml_reader.py  test_xml_reader.py  test_yaml_reader.py
tests/tests_plugin/: conftest.py  helper.py  test_cache_cleanup.py  test_compression_aware_loading.py  test_data_loader_fixture.py  test_data_path.py  test_file_reader_registration.py  test_ini_options.py  test_lazy_loading.py  test_loader_args.py  test_loader_data_path.py  test_loader_data_path_glob.py  test_loader_data_path_on_missing.py  test_loader_func_call_error.py  test_loader_func_global_index.py  test_loader_func_param_index.py  test_loader_func_validation.py  test_loader_stacking.py  test_multi_paths.py  test_param_id.py  test_test_generation_error.py  test_test_id.py
tests/tests_unit/: test_data_loader_registration.py  test_data_loader_setup.py  test_directory_loader.py  test_file_loader.py  test_path_resolver.py  test_session_file_cache.py  test_utils.py
tests/unit/: test_data_loader_registration.py  test_data_loader_setup.py  test_directory_loader.py  test_file_loader.py  test_path_resolver.py
tests/unit/data/files/: text.txt
