[build-system]
requires = ["setuptools >= 64.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pytest-data-loader"
description = "Pytest plugin for loading test data for data-driven testing (DDT)"
readme = "README.md"
license = {file="LICENSE"}
authors = [
  { name = "Yugo Kato" },
]
keywords = ["pytest", "data-driven testing", "DDT"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7.0.0,<9",
    "pluggy>=1.2.0",
    'typing_extensions>=4.1.0; python_version < "3.11"'
]
dynamic = ["version"]

[project.optional-dependencies]
lint = [
    "mypy>=1.15.0,<2",
    "pre-commit>=3.0.0,<5",
    "ruff>=0.14.0,<0.15.0",
]
test = [
    "pytest-mock>=3.0.0,<4",
    "pytest-smoke",
    "pytest-xdist[psutil]>=2.3.0,<4",
    "pyyaml>=6.0.0",
    'tomli>=2.3.0; python_version < "3.11"',
    "pypdf>=6.1.0"
]
dev = [
    "tox>=4.0.0,<5",
    "tox-uv>=1.0.0,<2",
    "pytest-data-loader[lint,test]",
]

[project.urls]
Homepage = "https://github.com/yugokato/pytest-data-loader"

[project.entry-points.pytest11]
data_loader = "pytest_data_loader.plugin"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "PIE",  # flake8-pie
    "PLC",  # Pylint convention
    "PLE",  # Pylint error
    "PLW",  # Pylint warning
    "RUF",  # Ruff-specific rules
    "T20",  # flake8-print
    "UP",   # pyupgrade
    "W",    # pycodestyle warning
]
ignore = [
    "PLC0415"   # import-outside-top-level
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
files = [
    "src"
]
mypy_path = [
    "src"
]
follow_imports = "skip"
follow_untyped_imports = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
